changes made for deployment, and minor ui fix
